<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/valledupar1"

        tools:context="com.example.gabriel.practica3.Hotels"
        tools:showIn="@layout/activity_hotels">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/arawk"
            android:id="@+id/arawak"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/arawak"
                android:textColor="@color/yellow"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ubicación_valledupar"
                android:onClick="ubicacion_arawak"/>



        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/leyenda"
            android:id="@+id/leyenda"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/leyenda"
                android:textColor="@color/yellow"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ubicación_valledupar"
                android:onClick="Mleyenda"/>



        </LinearLayout>





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/vajamar"
            android:id="@+id/vajamar"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/vajamar"
                android:textColor="@color/yellow"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ubicación_valledupar"
                android:onClick="ubicacion_vajamar"
                android:layout_gravity="center_vertical"/>



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:id="@+id/information" />
    </LinearLayout>


    </LinearLayout>
</ScrollView>

