<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.example.gabriel.practica3.Lugares"
        android:orientation="vertical"
        android:background="@drawable/valledupar1"
        tools:showIn="@layout/activity_lugares">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/obelisco"
            android:id="@+id/obelisco"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/obelisco"
            android:textColor="@color/yellow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="200sp"
            android:src="@drawable/parquevallenata"
            android:id="@+id/parquevallenata"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/yellow"
            android:text="@string/parque"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:src="@drawable/sirena"
            android:id="@+id/sirena"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/sirena"
            android:textColor="@color/yellow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inform_turistic"
            android:textColor="@color/red"/>

    </LinearLayout>

   </LinearLayout>
</ScrollView>


